style on home page is right, but factoring is not - need a jsx page for layout

--- a/source-files/_includes/layouts/default.njk
+++ b/source-files/_includes/layouts/default.njk
@@ -5,7 +5,7 @@ title: Ping Poet Products - Cloud Product Management and Software Development Co
 <html lang="en">
   {% include 'layouts/head.njk' %}
   <body>
-    <main>{{ content | safe }}</main>
+    {{ content | safe }}
   </body>
   {% include 'layouts/foot.njk' %}
 </html>
