--- a/source-files/_includes/layouts/head.njk
+++ b/source-files/_includes/layouts/head.njk
@@ -3,6 +3,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>{{ title }}</title>
+  <link rel="icon" 
+      type="image/png" 
+      href="/images/quill_pen_feather-rose_64x64.png" />
   <link rel="stylesheet" href="style/style.css" />
   <script type="module" src="js/main.js"></script>
 </head>
