--- a/source-files/style/style.scss
+++ b/source-files/style/style.scss
@@ -1,3 +1,17 @@
+
+// Ping Poet Tetradic Color Scheme
+$color_dogwood_rose: #D11363;
+$color_fulvous_orange: #D28314;
+$color_emrald_green: #14d283;
+$color_flickr_blue: #1463d2;
+
+$color_scheme_primary: $color_dogwood_rose;
+$color_scheme_secondary: $color_fulvous_orange; 
+
+// customize bootstrap theme colors
+$primary: $color_scheme_primary;
+$secondary: $color_scheme_secondary;
+
 // Import all of Bootstrap's CSS
 // https://getbootstrap.com/docs/5.2/customize/sass/#importing
 @import "~bootstrap/scss/bootstrap";
@@ -10,5 +24,7 @@
   height: 1.5em;
   margin-right: .5rem;
   content: "";
-  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23212529' viewBox='0 0 16 16'%3E%3Cpath d='M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z'/%3E%3C/svg%3E") no-repeat center center / 100% auto;
+  // for the colored svg see https://stackoverflow.com/a/46904983/51061
+  background-color: $primary;
+  mask: url("../images/arrow-right-circle-fill.svg") no-repeat 50% 50%;
 }
